--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 .layout {
   width: 100%;
   height: 100%;
+  font-family: 'Roboto', sans-serif;
+}
+
+html,
+body {
+  font-family: 'Roboto', sans-serif;
 }
